Index spacing and background consistency fix.

--- a/src/styles.css
+++ b/src/styles.css
@@ -115,6 +115,18 @@ g:hover text {
     flex-direction: column;
     align-items: center;
     font-family: 'quicksandregular', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #423e7e;
+    background-color: #2f6948;
+    transition: all 1s;
+}
+
+#hyesoliaBg {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'quicksandregular', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #7a3177;
     transition: all 1s;
 }
